add 13th iteration
move all necessary information into the file
instead of spreading the queries and data over
multiple layers of this application